--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -20,4 +24,15 @@ li a {
 
 li a:hover {
   background-color: #111111;
+}
+
+.container {
+    border: 15px solid black;
+    float: left;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
