changed spacing, changed icon

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: Arial;
+    font-family: Futura, Arial;
 }
 
 
@@ -32,7 +32,7 @@ li a {
 }
 
 li a:hover {
-  background-color: #111111;
+  color: #8d8d8d;
 }
 
 /* BODY STYLING*/
@@ -42,18 +42,20 @@ li a:hover {
 }
 
 .left-container, .right-container {
-    border: 15px solid black;
+    background-color: #000000
 }
 
 .left-container {
     margin-right: 20px;
     width: 33%;
     float: left;
+    background-color: #d0d0d0
 }
 
 .right-container {
     width: 67%;
     float: right;
+    background-color: #d0d0d0
 }
 
 .clearfix:after {
@@ -65,9 +67,11 @@ li a:hover {
 .restaurant {
     font: 15px Helvetica Neue;
     font-weight: bold;
-    
+    color: #0070c9;
+    margin-bottom: 0px;
+
 }
 
 .comment {
-    
+    margin-top: 0px;
 }
