added real text, some effects like underlined restaurant names when hovered over

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,10 @@ li a:hover {
     border-top: 2px solid gray;
 }
 
+.restaurant:hover {
+    text-decoration: underline;
+}
+
 .comment {
     font: 10pt Verdana;
     margin-top: 0px;
