--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@
     margin-bottom: 10px
 }
 
+.heading img {
+    height: 75px;
+    width: 75px;
+    float: left;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -35,6 +41,12 @@ li a:hover {
   color: #8d8d8d;
 }
 
+#username {
+    padding-left: 20px;
+    padding-top: 25px;
+    font-size: 20pt;
+}
+
 /* BODY STYLING*/
 .body-container {
 /* Sets height of children to height of largest child*/
@@ -50,6 +62,15 @@ li a:hover {
     width: 33%;
     float: left;
     background-color: #ffffff
+}
+
+.left-container img {
+    height: 75px;
+    width: 75px;
+    object-fit: cover;
+    float: left;
+    border-radius: 50%;
+    padding: 0px 0px 0px 0px;
 }
 
 .right-container {
@@ -80,4 +101,27 @@ li a:hover {
 .comment {
     font: 10pt Verdana;
     margin-top: 0px;
+}
+.preferences-section {
+    background: #d0d0d0;
+    height: 125px;
+    width: 100%;
+    float: left;
+}
+
+.preference {
+    background: #ffffff;
+    color: #0070c9;
+    border-radius: 15%;
+    height: 20px;
+    float: left;
+    margin: 10px;
+    padding: 5px 5px 25px 5px;
+}
+
+.preference img {
+    height: 20px;
+    width: 20px;
+    padding: 3px;
+    float: right;
 }
