--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,10 @@
 
 .heading {
     display: block;
-    margin-bottom: 10px
+    position: fixed;
+    
+    top: 0%;
+    width: 100%
 }
 
 .heading img {
@@ -51,6 +54,7 @@ li a:hover {
 .body-container {
 /* Sets height of children to height of largest child*/
     display: flex;
+    margin-top: 100px;
 }
 
 .left-container, .right-container {
@@ -104,7 +108,6 @@ li a:hover {
 }
 .preferences-section {
     background: #d0d0d0;
-    height: 125px;
     width: 100%;
     float: left;
 }
