--- a/styles.css
+++ b/styles.css
@@ -141,14 +141,25 @@ li a:hover {
 }
   
 .fa-twitter {
-    background: rgb(0, 0, 0);
+    background: #1DA1F2;
+    color: white;
+}
+
+.fa-instagram {
+    background: #E1306C;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #0077B5;
     color: white;
 }
 
 .fa {
-    padding: 20px;
+    padding: 8px;
     font-size: 30px;
     width: 30px;
+    height: 30px;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
