replaced pngs with fa icons, changed colors sd2342
:q
:x!

--- a/styles.css
+++ b/styles.css
@@ -129,10 +129,21 @@ li a:hover {
     padding: 3px;
     float: right;
 }
-
+/*FOOTER STYLING*/
 .footer {
     padding-left: 20px;
     padding-top: 25px;
+}
+
+.fa {
+    padding: 8px;
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
 }
 
 .fa-facebook {
@@ -155,13 +166,14 @@ li a:hover {
     color: white;
 }
 
-.fa {
-    padding: 8px;
-    font-size: 30px;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;
+.fa-plus {
+    background: #0070c9;
+    color: #FFFFFF;
+    margin: 15px;
+}
+
+.fa-close {
+    color: #0070c9;
+    padding: 0px;
+    margin: 0px;
 }
