--- a/main2b.css
+++ b/main2b.css
@@ -56,10 +56,7 @@ li a:hover {
 /* Sets height of children to height of largest child*/
     display: flex;
     margin-top: 100px;
-}
-
-.left-container, .right-container {
-    background-color: #000000
+   
 }
 
 .left-container {
@@ -81,7 +78,19 @@ li a:hover {
 .right-container {
     width: 67%;
     float: right;
-    background-color: #d0d0d0
+    border-left-style: outset;
+    border-left-color: #333333;
+    padding: 10px;
+    background-color: #ffffff
+}
+
+.right-container img {
+    height: 75px;
+    width: 75px;
+    object-fit: cover;
+    float: left;
+    /* border-radius: 50%;
+    padding: 0px 0px 0px 0px; */
 }
 
 .clearfix:after {
@@ -128,6 +137,21 @@ li a:hover {
     width: 20px;
     padding: 3px;
     float: right;
+}
+
+.opinion {
+    border-style: outset;
+    border-radius: 20px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
+    
+}
+
+#restaurant_info {
+   padding-left: 20px;
+   float: left;
+   margin-top: 10px;
 }
 /*FOOTER STYLING*/
 .footer {
