--- a/main2b.css
+++ b/main2b.css
@@ -82,7 +82,7 @@ li a:hover {
     border-left-style: outset;
     border-left-color: #333333;
     padding: 10px;
-    background-color: #ffffff
+    background-color: #d0d0d0
 }
 
 .right-container img {
@@ -146,7 +146,7 @@ li a:hover {
     margin-left: 30px;
     margin-bottom: 30px;
     padding: 20px;
-    
+    background-color: #ffffff
 }
 
 #restaurant_info {
