--- a/main3.css
+++ b/main3.css
@@ -77,6 +77,10 @@ li a:hover {
     display: inline-block;
 }
 
+#personal-information-title {
+    display: none;
+}
+
 .tablet-tabs-section {
     text-align: center;
     background-color: lightgray;
@@ -97,6 +101,7 @@ li a:hover {
 .mobile-tabs-section ul li {
     width: 33%;
     font-size: 10px;
+    border: solid lightgray;
 }
 
 /* BODY STYLING*/
@@ -306,6 +311,9 @@ form input[name="birthday"] {
         margin: 5px;
         float: left;
     }
+    #app-activity-title {
+        display: none;
+    }
 }
 
 /* Tablet Styles */
@@ -331,5 +339,11 @@ form input[name="birthday"] {
         background-color: #B2D6FF; 
         padding-top: 100px;
         /* Blue */
+    }
+    .body-container {
+        display: flex;
+    }
+    #personal-information-title {
+        display: block;
     }
 }
