--- a/main2b.css
+++ b/main2b.css
@@ -149,7 +149,7 @@ li a:hover {
     background-color: #ffffff
 }
 
-#restaurant_info {
+.restaurant-info {
    padding-left: 20px;
    float: left;
    margin-top: 10px;
